# HexoSynth

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  _build.sh  _build_release.sh  _debug.sh  _doc.sh  _run_gui_test.sh  _t.sh  _test.sh  copy_wlcode.sh  install_githooks.sh
.githooks/: check_patched.wl  pre-commit
.github/workflows/: build.yml
assets/: color_palette.xcf
cpal_standalone/: Cargo.toml  init.hxy
cpal_standalone/src/: main.rs
doc/: hexosynth_wlambda_api.md
examples/: bench_env.rs  bench_pitch.rs  bench_vm.rs  free.rs  standalone.rs
gui_tests/: Cargo.toml
gui_tests/src/: main.rs
gui_tests/test_scripts/: help_screen.wl  hex_context_menu.wl  hex_move_cell.wl  hex_move_connect_cells.wl  hex_move_gestures.wl  hex_new_hex.wl  knobs.wl  tracker_click_not_scroll_down.wl  tracker_note_entry.wl
gui_tests/wlambda_lib/: hex_lib.wl  test_lib.wl
hexosynth/: Cargo.toml
hexosynth/src/: cluster.rs  dyn_widgets.rs  graph_minmax.rs  grid_model.rs  matrix_param_model.rs
hexosynth/src/res/: init_patch_2022_1.hxy
hexosynth/src/wlapi/: connector.rs  pattern_editor.rs  wichtext.rs
hexosynth/src/wlapi/hxdsp/: atom.rs  blockcode.rs  graph.rs  matrix.rs  matrix_recorder.rs  node_info.rs  octave_keys.rs  param.rs  scope.rs
hexosynth/src/wlcode/: main.wl
hexosynth/src/wlcode/wllib/: popup_debug_browser.wl
hexosynth/src/wlcode_compiletime/wllib/: texts.wl
hexosynth_cpal/: Cargo.toml  init.hxy
hexosynth_cpal/src/: main.rs
hexosynth_jack/: Cargo.toml  run.sh
hexosynth_jack/src/: main.rs
hexosynth_plug/: Cargo.toml  build.sh  tbuild.sh  trun.sh
hexosynth_plug/src/: lib.rs  main.rs
jack_standalone/: Cargo.toml  main.wl  run.sh
jack_standalone/src/: main.rs
jack_standalone/wllib/: editor.wl  styling.wl  tests.wl
misc_patches/: 20210606_fm.hxy  20210606_fm_amp_mod.hxy  20210606_pre_fm.hxy  20210619_ad_demo.hxy  20210620_delay_tracker.hxy  20210620_glitchy_delay.hxy  20210628_allpass_rev_1.hxy  20210628_allpass_spooky_rev_2.hxy  20210704_kick_drum_delay_shift.hxy  20210709_sfilter_mod.hxy  20210710_kick_drum_delay_shift_modamt.hxy  20210710_modamt_test.hxy  20210713_hal_cham_sfilter_with_kick.hxy  20210717_weird_noises_allpass_filer_fb.hxy  20210725_bosc_noodle.hxy  20210806_comb_lfo.hxy  20210806_weird_vosc_sounds.hxy  20210808_pverb_ambient.hxy  20210812_ambience_from_6_rand.hxy  20210813_scary_rndwk.hxy  20210817_scaryshit_with_vosc.hxy  20210819_ambient_piece1.hxy  20210823_mux9_fast_blurry_seq.hxy  20210823_quant_demo1.hxy  20210824_quant_demo2.hxy  20210824_quant_demo2_2.hxy  20210828_two_quant_seq.hxy  20210830_quant_trig.hxy  20210901_node_def_cate_colors_pentatonic.hxy  20211002_little_ambient_patch.hxy  20211028_spooky_stuff_settings.hxy  20211028_spooky_stuff_settings_variance.hxy  20211030_bowstri_test.hxy
new_gui/: Cargo.toml  _t.sh  init.hxy
new_gui/src/: cluster.rs  main.rs  matrix_param_model.rs
new_gui/src/ui/: painter.rs  rect.rs
new_gui/src/ui/widgets/: block_code.rs  connector.rs  cv_array.rs  mod.rs  octave_keys.rs
new_gui/src/wlapi/: hex_knob.rs  mod.rs
new_gui/src/wlapi/hxdsp/: block_code_model.rs  matrix.rs  matrix_recorder.rs  mod.rs
new_gui/wllib/: observable.wl  params_widget.wl  settings_widget.wl  test_wpp.wl  wpp.wl
nih_plug/: Cargo.toml  build.sh  tbuild.sh
nih_plug/src/: lib.rs  main.rs
nih_plug/xtask/: Cargo.toml
scripts/: patch2testcode.wl
src/: actions.rs  cell_dir.rs  cluster.rs  dyn_widgets.rs  ext_param_model.rs  feedback.rs  kortex.rs  lib.rs  ll.rs  matrix.rs  matrix_param_model.rs  matrix_repr.rs  menu.rs  monitor.rs  monitors.rs  nodes.rs  state.rs  ui_ctrl.rs  uimsg_queue.rs  util.rs
src/dsp/: amp.rs  helpers.rs  mod.rs  node_amp.rs  node_out.rs  node_sin.rs  node_test.rs  node_tseq.rs  out.rs  satom.rs  sin.rs
src/dsp/tracker/: mod.rs  pattern.rs  sequencer.rs
src/nodes/: drop_thread.rs  mod.rs  node_conf.rs  node_exec.rs  node_graph.rs  node_graph_ordering.rs  node_prog.rs
src/res/: init_patch_2022_1.hxy
src/ui/: matrix.rs  menu.rs  mod.rs  monitors.rs  node_panel.rs  util_panel.rs
src/wlapi/: connector.rs  hex_knob.rs  list.rs  mod.rs  pattern_editor.rs  sample_buf.rs  wichtext.rs
src/wlapi/hxdsp/: atom.rs  blockcode.rs  graph.rs  graph_minmax.rs  grid_model.rs  matrix.rs  matrix_recorder.rs  mod.rs  node_info.rs  octave_keys.rs  param.rs  scope.rs
src/wlcode/: main.wl
src/wlcode/wllib/: editor.wl  file_selector.wl  styling.wl  tests.wl  texts.wl
src/wlcode_compiletime/: main.wl
src/wlcode_compiletime/wllib/: editor.wl  file_selector.wl  styling.wl  tests.wl  texts.wl
tests/: basics.rs  gui.rs  test_lib.wl
tests/gui/: _sometest.wl  hex_new_hex.wl  tracker_click_not_scroll_down.wl  tracker_note_entry.wl
tuix_gui/: Cargo.toml  main.wl  main_style.css  main_style_test.css  settings_widget.wl
tuix_gui/src/: connector.rs  cv_array.rs  grid_models.rs  hexgrid.rs  hexgrid_old.rs  hexknob.rs  hexo_consts.rs  jack.rs  main.rs  matrix_param_model.rs  octave_keys.rs  painter.rs  pattern_editor.rs  rect.rs  synth.rs
tuix_gui/src/ui/: mod.rs
tuix_gui/src/ui/widgets/: block_code.rs  hexgrid.rs  hexknob.rs  mod.rs  pattern_editor.rs
tuix_gui/src/wlapi/: hex_knob.rs  mod.rs
tuix_gui/src/wlapi/hxdsp/: atom.rs  grid_model.rs  matrix.rs  mod.rs  node_id.rs  node_info.rs  param.rs
tuix_gui/wllib/: connect_widget.wl  main.wl  params_widget.wl  settings_widget.wl  util.wl
vst2/: Cargo.toml
vst2/src/: lib.rs
xtask/: Cargo.toml
