[package]
name        = "hexosynth"
version     = "0.1.0-alpha-1"
authors     = ["Weird Constructor <weirdconstructor@m8geil.de>"]
license     = "AGPL-3.0-or-later"
edition     = "2018"
description = "HexoSynth - A hexagonal modular synthesizer plugin"

[dependencies]
hexodsp    = { git = "https://github.com/WeirdConstructor/HexoDSP.git" }
#hexodsp    = { path = "../hexodsp" }
hexotk     = { git = "https://github.com/WeirdConstructor/HexoTK.git", features=["driver"] }
#hexotk     = { path = "../hexotk", features=["driver"] }
raw-window-handle  = "0.3"
#baseplug   = { git = "https://github.com/wrl/baseplug.git" }
baseplug   = { git = "https://github.com/WeirdConstructor/baseplug.git", branch = "plugin_context" }
#baseplug   = { path = "../baseplug" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ringbuf    = "0.2.2"
keyboard-types = { version = "0.5.0", default-features = false }
triple_buffer = "5.0.6"

[dev-dependencies]
microfft    = "0.3.1"
num-complex = "0.2"
hound       = "3.4.0"
jack        = "0.6.6"
wlambda     = { path = "../wlambda" }
rustyline   = { version = "6.1.2" }

[lib]
name="hexosynth"
crate-type = ["cdylib", "lib"]
