[package]
name        = "hexosynth"
version     = "0.1.0-alpha-4"
authors     = ["Weird Constructor <weirdconstructor@m8geil.de>"]
license     = "AGPL-3.0-or-later"
edition     = "2018"
description = "HexoSynth - A hexagonal modular synthesizer plugin"

[dependencies]
#hexodsp    = { git = "https://github.com/WeirdConstructor/HexoDSP.git" }
wlambda     = { path = "../wlambda", features=["all"] }
hexodsp    = { path = "../hexodsp" }
#hexotk     = { git = "https://github.com/WeirdConstructor/HexoTK.git", tag = "hexosynth_compat", features=["driver"] }
hexotk     = { path = "../hexotk", features=["driver"] }
raw-window-handle  = "0.4.2"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ringbuf    = "0.2.2"
keyboard-types = { version = "0.6.1", default-features = false }
triple_buffer = "5.0.6"
hound       = "3.4.0"

#[dev-dependencies]
#microfft    = "0.3.1"
#num-complex = "0.2"
#jack        = "0.6.6"

[lib]
name="hexosynth"
crate-type = ["cdylib", "lib"]
