[package]
name        = "hexosynth"
version     = "0.2.0-alpha-1"
authors     = ["Weird Constructor <weirdconstructor@m8geil.de>"]
license     = "GPL-3.0-or-later"
edition     = "2021"
description = "HexoSynth - A hexagonal modular synthesizer plugin"

[dependencies]
wlambda     = { git = "https://github.com/WeirdConstructor/WLambda.git", features=["chrono", "toml", "quick-xml", "base64", "serde_json"] }
hexodsp    = { git = "https://github.com/WeirdConstructor/HexoDSP.git" }
#hexodsp    = { path = "../hexodsp" }
hexotk     = { git = "https://github.com/WeirdConstructor/HexoTK.git" }
#hexotk     = { path = "../hexotk", features=["driver"] }
raw-window-handle  = "0.4.2"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ringbuf    = "0.2.2"
keyboard-types = { version = "0.6.1", default-features = false }
triple_buffer = "5.0.6"
hound       = "3.4.0"

#[dev-dependencies]
#microfft    = "0.3.1"
#num-complex = "0.2"
#jack        = "0.6.6"

[lib]
name="hexosynth"
crate-type = ["cdylib", "lib"]
