[package]
name        = "hexosynth_jack"
version     = "0.1.0-alpha-2"
authors     = ["Weird Constructor <weirdconstructor@m8geil.de>"]
license     = "AGPL-3.0-or-later"
edition     = "2018"
description = "HexoSynth - A hexagonal modular synthesizer plugin"

[dependencies]
hexosynth  = { path = ".." }
hexodsp    = { path = "../../hexodsp" }
#hexodsp    = { git = "https://github.com/WeirdConstructor/HexoDSP.git" }
hexotk     = { path = "../../hexotk" }
#hexotk     = { git = "https://github.com/WeirdConstructor/HexoTK.git", features=["driver"] }
keyboard-types = { version = "0.5.0", default-features = false }
wlambda     = { path = "../../wlambda" }
rustyline   = { version = "6.1.2" }
microfft    = "0.3.1"
num-complex = "0.2"
hound       = "3.4.0"
