[package]
name        = "hexosynth_cpal"
version     = "0.2.0-alpha-1"
authors     = ["Weird Constructor <weirdconstructor@m8geil.de>"]
license     = "GPL-3.0-or-later"
edition     = "2021"
description = "HexoSynth - A hexagonal modular synthesizer plugin"

[dependencies]
hexosynth  = { path = "../hexosynth" }
hexodsp    = { git = "https://github.com/WeirdConstructor/HexoDSP.git" }
hexotk     = { git = "https://github.com/WeirdConstructor/HexoTK.git" }
raw-window-handle  = "0.3"
cpal   = "0.13.5"
anyhow = "1.0.58"

#[patch.'https://github.com/WeirdConstructor/HexoTK.git']
#hexotk = { path = "../../hexotk" }
