[package]
name        = "hexosynth_jack"
version     = "0.2.0-alpha-1"
authors     = ["Weird Constructor <weirdconstructor@m8geil.de>"]
license     = "AGPL-3.0-or-later"
edition     = "2021"
description = "HexoSynth - A hexagonal modular synthesizer plugin"

[dependencies]
hexosynth  = { path = ".." }
hexodsp    = { git = "https://github.com/WeirdConstructor/HexoDSP.git" }
#hexodsp    = { path = "../../hexodsp" }
hexotk     = { git = "https://github.com/WeirdConstructor/HexoTK.git" }
#hexotk     = { path = "../../hexotk" }
raw-window-handle  = "0.3"
jack       = "0.6.6"

#[patch.'https://github.com/WeirdConstructor/HexoTK.git']
#hexotk = { path = "../../hexotk" }
