[package]
name = "hexosynth_plug"
version = "0.2.0-alpha-1"
edition = "2021"
authors = ["Weird Constructor <weirdconstructor@m8geil.de>"]
license = "GPL-3.0-or-later"

description = "A modular synthesizer with hexagonal nodes"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
hexosynth = { path = "../" }
#nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["standalone", "assert_process_allocs"] }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["standalone"] }
hexodsp = { git = "https://github.com/WeirdConstructor/HexoDSP.git" }
hexotk = { git = "https://github.com/WeirdConstructor/HexoTK.git" }
synfx-dsp = { git = "https://github.com/WeirdConstructor/synfx-dsp.git" }
atomic_float = "0.1"

[workspace]
members = ["xtask"]

#[patch.'https://github.com/robbert-vdh/nih-plug']
#nih_plug = { path = "../../other/nih-plug" }
#[patch.'https://github.com/WeirdConstructor/HexoTK.git']
#hexotk = { path = "../../hexotk" }
#[patch.'https://github.com/WeirdConstructor/HexoDSP.git']
#hexodsp = { path = "../../hexodsp" }
#[patch.'https://github.com/WeirdConstructor/synfx-dsp.git']
#synfx-dsp = { path = "../../synfx-dsp" }
#[patch.crates-io]
#synfx-dsp = { path = "../../synfx-dsp" }
