[package]
name = "tuix_gui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuix    = { path = "../../tuix" }
femtovg = { git = "https://github.com/femtovg/femtovg", branch = "master"}
hexodsp = { git = "https://github.com/WeirdConstructor/HexoDSP" }
