[package]
name        = "hexosynth_vst"
version     = "0.1.0-alpha-2"
authors     = ["Weird Constructor <weirdconstructor@m8geil.de>"]
license     = "AGPL-3.0-or-later"
edition     = "2018"
description = "HexoSynth - A hexagonal modular synthesizer plugin"

[dependencies]
hexosynth  = { path = ".." }
hexodsp    = { git = "https://github.com/WeirdConstructor/HexoDSP.git" }
hexotk     = { git = "https://github.com/WeirdConstructor/HexoTK.git", features=["driver"] }
raw-window-handle  = "0.3"
baseplug   = { git = "https://github.com/WeirdConstructor/baseplug.git", branch = "plugin_context" }
keyboard-types = { version = "0.5.0", default-features = false }
serde      = { version = "1.0", features = ["derive"] }

[lib]
name="hexosynth_vst"
crate-type = ["cdylib", "lib"]
