[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors = ["Weird Constructor <weirdconstructor@m8geil.de>"]
description = "A helper for compiling and bundling the HexoSynth plugins, can be invoked in this repo using `cargo xtask`"
license = "ISC"

[dependencies]
nih_plug_xtask  = { git = "https://github.com/robbert-vdh/nih-plug.git" }
#nih_plug_xtask = { path = "../../../other/nih-plug/nih_plug_xtask" }
