[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
description = "A helper for compiling and bundling plugins, can be invoked in this repo using `cargo xtask`"
license = "ISC"

[dependencies]
nih_plug_xtask = { path = "../../../other/nih-plug/nih_plug_xtask" }
